# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
src/: generator.cpp  generator.hpp  main.cpp  renderer.cpp  renderer.hpp
